feat: Sale items views, templates and unit tests

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -49,6 +49,11 @@
             </div>
         </li>
         <li class="nav-item">
+            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'sale_items' %}" id="news" aria-haspopup="true" aria-expanded="false">
+                SALE
+            </a>
+        </li>
+        <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'news_items' %}" id="news" aria-haspopup="true" aria-expanded="false">
                 News
             </a>
