--- a/products/templates/products/sale_items.html
+++ b/products/templates/products/sale_items.html
@@ -12,8 +12,8 @@
 <div class="container-fluid px-3 products-page">
     <div class="row">
         <div class="col-12 col-sm-6 p-4 my-auto">
-            <h1 class="font-black-bg">Products</h1>
-            <p class="font-black-bg">Browse our extensive rugby boots, jerseys and accessories</p>
+            <h1 class="font-black-bg">Sale Items</h1>
+            <p class="font-black-bg">Browse our extensive rugby boots, jerseys and accessories on sale</p>
         </div>
         <div class="col-12 col-sm-6 p-4 my-auto">
             <div class="sort-select-wrapper w-100">
@@ -35,7 +35,7 @@
     <div class="row">
         <div class="">
             <div class="row">
-                {% for product in products %}
+                {% for product in sale_items %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                                 <div class="card" style="width: 18rem;">
                                     {% if product.image %}
