--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -15,11 +15,12 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">
+<div class="hero-image">
+    <div class="section-holder">
+        <div class="form-holder-lg form-holder-generic">
         <div class="row">
             <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">Thank You</h2>
+                <h1 class="logo-font mb-4">Thank You</h1>
                 <hr>
                 <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
             </div>
@@ -200,14 +201,19 @@
                         <span class="text-uppercase">Back to Profile</span>
                     </a>
                 {% else %}
-                    <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-black rounded-0 my-2">
-                        <span class="icon mr-2">
-                            <i class="fas fa-gifts"></i>
-                        </span>
-                        <span class="text-uppercase">Now check out the latest deals!</span>
-                    </a>
+                    <div class="my-2">
+                        <a href="{% url 'sale_items' %}" class="btn black-btn">
+                            <span class="icon mr-2">
+                                <i class="fas fa-gifts"></i>
+                            </span>
+                            <span>Now check out the latest sale items</span>
+                        </a>
+                    </div>
                 {% endif %}
 			</div>
 		</div>
+    </div>
+    </div>
+</div>
     </div>
 {% endblock %}
